--- a/app/src/main/res/layout/note_row.xml
+++ b/app/src/main/res/layout/note_row.xml
@@ -5,11 +5,11 @@
     android:id="@+id/note_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.cardview.widget.CardView
+        android:id="@+id/card_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardUseCompatPadding="true"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="5dp">
+        app:cardCornerRadius="10dp">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="60dp">
@@ -17,6 +17,7 @@
                 android:id="@+id/txtNote"
                 android:padding="10dp"
                 android:text="Título Demonstração"
+                android:textColor="#ffffff"
                 android:layout_marginBottom="15dp"
                 android:maxLines="2"
                 android:layout_width="match_parent"
@@ -26,6 +27,7 @@
                 android:id="@+id/txtCreateTime"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="true"
+                android:textColor="#ffffff"
                 android:textSize="12sp"
                 android:text="06 Junho 12:00"
             android:padding="5dp"
