--- a/app/src/main/res/layout/activity_signup_login.xml
+++ b/app/src/main/res/layout/activity_signup_login.xml
@@ -64,13 +64,59 @@
                 android:id="@+id/login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="start"
                 android:layout_below="@id/password"
-                android:textColor="#ffffff"
-                android:layout_margin="10dp"
+                android:layout_gravity="start"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
                 android:background="@color/design_default_color_primary_dark"
-                android:text="@string/action_sign_in"
-            />
+                android:text="@string/varLogin"
+                android:textColor="#ffffff" />
+
+            <Button
+                android:id="@+id/btnCadastro"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/login"
+                android:layout_gravity="start"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="80dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
+                android:onClick="CreateNewUser"
+                android:text="@string/varBtnCadastro" />
+
+            <ImageView
+                android:id="@+id/langBr"
+                android:layout_width="60dp"
+                android:layout_height="35dp"
+                android:layout_below="@id/btnCadastro"
+                android:layout_marginStart="100dp"
+                android:layout_marginBottom="25dp"
+                android:scaleType="fitXY"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:srcCompat="@drawable/brflag"
+                android:layout_marginLeft="20dp" />
+
+            <ImageView
+                android:id="@+id/langEn"
+                android:layout_width="60dp"
+                android:layout_height="35dp"
+                android:layout_below="@id/btnCadastro"
+                android:layout_alignLeft="@id/langBr"
+                android:layout_marginStart="80dp"
+                android:layout_marginBottom="25dp"
+                android:scaleType="fitXY"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/langBr"
+                app:srcCompat="@drawable/usflag"
+                android:layout_marginLeft="200dp" />
 
             <ProgressBar
                 android:id="@+id/loading"
