--- a/app/src/main/res/layout/activity_signup_login.xml
+++ b/app/src/main/res/layout/activity_signup_login.xml
@@ -15,16 +15,16 @@
     tools:context=".SignupLoginActivity">
 
     <TextView
-        android:text="Welcome"
         android:id="@+id/title"
-        android:layout_marginBottom="10dp"
+        style="@style/TextAppearance.Compat.Notification.Title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
+        android:layout_marginBottom="10dp"
+        android:gravity="center_horizontal"
         android:padding="10dp"
-        android:textSize="25dp"
-        style="@style/TextAppearance.Compat.Notification.Title"
-        android:gravity="center_horizontal" />
+        android:text="@string/varBoasVindas"
+        android:textAlignment="center"
+        android:textSize="25sp" />
 
     <androidx.cardview.widget.CardView
         android:layout_below="@id/title"
@@ -40,31 +40,41 @@
             android:layout_height="wrap_content">
 
             <EditText
-                android:id="@+id/username"
+                android:id="@+id/edtUsername"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Username"
-                android:layout_margin="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
+                android:hint="@string/varDicaUsername"
                 android:inputType="textEmailAddress"
-            />
+                android:autofillHints="" />
 
             <EditText
-                android:id="@+id/password"
+                android:id="@+id/edtPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/username"
-                android:hint="@string/prompt_password"
-                android:layout_margin="10dp"
+                android:layout_below="@id/edtUsername"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
+                android:hint="@string/varDicaSenha"
                 android:imeActionLabel="@string/action_sign_in_short"
                 android:imeOptions="actionDone"
                 android:inputType="textPassword"
-            />
+                android:importantForAutofill="no" />
 
             <Button
-                android:id="@+id/login"
+                android:id="@+id/btnAcessar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/password"
+                android:layout_below="@id/edtPassword"
                 android:layout_gravity="start"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
@@ -77,10 +87,10 @@
                 android:textColor="#ffffff" />
 
             <Button
-                android:id="@+id/btnCadastro"
+                android:id="@+id/btnCriarConta"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/login"
+                android:layout_below="@id/btnAcessar"
                 android:layout_gravity="start"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
@@ -95,32 +105,54 @@
                 android:id="@+id/langBr"
                 android:layout_width="60dp"
                 android:layout_height="35dp"
-                android:layout_below="@id/btnCadastro"
-                android:layout_marginStart="100dp"
+                android:layout_below="@id/btnCriarConta"
+                android:layout_marginLeft="60dp"
                 android:layout_marginBottom="25dp"
+                android:onClick="idiomaPT"
                 android:scaleType="fitXY"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:srcCompat="@drawable/brflag"
-                android:layout_marginLeft="20dp" />
+                android:contentDescription="@string/todo"
+                android:layout_marginStart="60dp" />
 
             <ImageView
                 android:id="@+id/langEn"
                 android:layout_width="60dp"
                 android:layout_height="35dp"
-                android:layout_below="@id/btnCadastro"
+                android:layout_below="@id/btnCriarConta"
                 android:layout_alignLeft="@id/langBr"
-                android:layout_marginStart="80dp"
+                android:layout_marginLeft="80dp"
                 android:layout_marginBottom="25dp"
+                android:onClick="idiomaEN"
                 android:scaleType="fitXY"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/langBr"
                 app:srcCompat="@drawable/usflag"
-                android:layout_marginLeft="200dp" />
+                android:contentDescription="@string/todo"
+                android:layout_alignStart="@id/langBr"
+                android:layout_marginStart="80dp" />
+
+            <ImageView
+                android:id="@+id/langEs"
+                android:layout_width="60dp"
+                android:layout_height="35dp"
+                android:layout_below="@id/btnCriarConta"
+                android:layout_alignLeft="@id/langEn"
+                android:layout_marginLeft="80dp"
+                android:layout_marginBottom="25dp"
+                android:onClick="idiomaES"
+                android:scaleType="fitXY"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/langBr"
+                app:srcCompat="@drawable/spflag"
+                android:contentDescription="@string/todo"
+                android:layout_alignStart="@id/langEn"
+                android:layout_marginStart="80dp" />
 
             <ProgressBar
                 android:id="@+id/loading"
-                android:layout_below="@id/login"
+                android:layout_below="@id/btnAcessar"
                 android:layout_centerHorizontal="true"
                 android:layout_margin="10dp"
                 android:layout_width="wrap_content"
